--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <nav >
             <a class="btn" href="HowItWorks.html">How It Works</a>
-            <a class="btn" href="#about">About Me</a>
+            <a class="btn" href="About.html">About Me</a>
             <a class="btn" href="#sign-in">Sign In</a>
             <a class="btn" href="#sign-up">Sign Up</a>
         </nav>
