--- a/HowItWorks.html
+++ b/HowItWorks.html
@@ -16,7 +16,7 @@
         <nav>
             <a class="btn" href="index.html">Home</a>
             <a class="btn" href="HowItWorks.html">How It Works</a>
-            <a class="btn" href="about.html">About Me</a>
+            <a class="btn" href="About.html">About Me</a>
             <a class="btn" href="signin.html">Sign In</a>
             <a class="btn" href="signup.html">Sign Up</a>
         </nav>
